Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46871

Qt build fails when configured with -no-feature-completer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.6.0 RC
    • 5.4.2
    • None
    • Linux cross-compiling to linux i686 with:
      g++ --version
      i686-pc-linux-gnu-g++ (Sourcery CodeBench Lite 2012.09-62) 4.7.2
      config.status attached
    • c9dd554ea600f5a3c23053a507c2ef1e4c124f4e

      Trying to build qt from source. Compile fails with message:
      widgets/qcombobox.cpp: In member function 'void QComboBoxPrivate::setCurrentIndex(const QModelIndex&)':
      widgets/qcombobox.cpp:2079:27: error: 'class QLineEdit' has no member named 'completer'
      widgets/qcombobox.cpp:2080:27: error: 'class QLineEdit' has no member named 'completer'
      make[3]: *** [.obj/qcombobox.o] Error 1

      Access to lineEdit->completer() should be guarded with
      #ifndef QT_NO_COMPLETER

        For Gerrit Dashboard: QTBUG-46871
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            pzeldin Pavel Zeldin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes