QComboBox: Fix compilation with QT_NO_COMPLETER

Change-Id: Ie57b06ebbddaa0801e265e6908da1548fe02085a
Task-number: QTBUG-46871
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>
Reviewed-by: André Hartmann <aha_1980@gmx.de>